Fix color issues in dark mode

--- a/frontend/src/style/custom.scss
+++ b/frontend/src/style/custom.scss
@@ -173,4 +173,16 @@ a {
   // --bs-list-group-bg-dark: #ffffff;
 
   // --bs-list-group-bg: var(--bs-success-text-emphasis)
+
+  .table-primary {
+    --bs-table-color: var(--bs-primary-text-emphasis);
+    --bs-table-bg: var(--bs-primary-bg-subtle);
+    --bs-table-border-color: var(--bs-primary-border-subtle);
+    --bs-table-striped-color: var(--bs-primary-text-emphasis);
+    --bs-table-striped-bg: var(--bs-primary-bg-subtle);
+    --bs-table-active-color: var(--bs-primary-text-emphasis);
+    --bs-table-active-bg: var(--bs-primary-border-subtle);
+    --bs-table-hover-color: var(--bs-primary-text-emphasis);
+    --bs-table-hover-bg: var(--bs-primary-border-subtle);
+  }
 }
